--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: java
 jdk:
   - oraclejdk8
 
+# comment
 install: echo "skip 'gradle assemble' step"
 script: gradle build --continue
+
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
